--- a/objectos-comuns-sitebricks/src/test/resources/views/context-after.html
+++ b/objectos-comuns-sitebricks/src/test/resources/views/context-after.html
@@ -1,6 +1,5 @@
 <html>
-<head>
-<script type="text/javascript">var context = {"msg":"Hello world!"};</script>
+<head><script type="text/javascript">var context = {"msg":"Hello world!"};</script>
 <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
 <title>Whatever</title>
 <script type="text/javascript" src="mootools-core.js"></script>
